Remove PWA features: removed manifest.json, service-worker.js and related references

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,8 +1,11 @@
 <%- include('partials/header', { title: 'Home Page' }) %>
 
 <main>
-  <p>Welcome to our homepage!</p>
+  <p>Welcome to our homepage! </p>
+  <button class="btn btn-primary">Test Button</button>
 </main>
+
+
 
 <%- include('partials/footer') %>
 
