--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,5 +1,7 @@
 <footer>
     <p>&copy; 2025 My Company</p>
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+Q/lb1H9z0bCw4BNeXZoZ+IM+LqP" crossorigin="anonymous"></script>
+
 </body>
 </html>
