--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -3,21 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title><%= title %></title>
-  <!-- Manifest -->
-  <link rel="manifest" href="/manifest.json">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ENjdO4Dr2bkBIFxQpeoVZ0A6CkD5fQ7P4e5zFZ3jc5I3Qpt5Qqf2w7D" crossorigin="anonymous">
+
   <!-- Stylesheet -->
 <link rel="stylesheet" href="/styles.css"> 
-  <script>
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('/service-worker.js')
-        .then(function(registration) {
-          console.log('Service Worker registered with scope:', registration.scope);
-        })
-        .catch(function(error) {
-          console.log('Service Worker registration failed:', error);
-        });
-    }
-  </script>
+
+
 </head>
 <body>
   <header>
