--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -3,7 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title><%= title %></title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ENjdO4Dr2bkBIFxQpeoVZ0A6CkD5fQ7P4e5zFZ3jc5I3Qpt5Qqf2w7D" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+  <script src="/socket.io/socket.io.js"></script>
+  <script>
+    const socket = io();
+  </script>
 
   <!-- Stylesheet -->
 <link rel="stylesheet" href="/styles.css"> 
